tests/ui/invalid_ident.stderr
error: cast failed: invalid identifier `3`
 --> tests/ui/invalid_ident.rs:5:8
  |
5 |        ident("3")
  |        ^^^^^
