tests/ui/invalid_ident.rs
use metamatch::unquote;

fn main() {
    unquote! {
       ident("3")
    }
}
